# otomisasi-program-youtube

./: .gitignore  BUILD_COMPLETE.txt  BUILD_STRATEGY.md  COMMANDS.md  CONTRIBUTING.md  DEPLOYMENT.md  FILE_INDEX.md  INSTALL_ARCH.md  INSTALL_WINDOWS.md  Makefile  PROJECT.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  WINDOWS_BUILD_GUIDE.md  build-linux-strategy.sh  build-linux.sh  build-windows.bat  build-windows.sh  install-arch.sh  requirements-dev.txt  run.py  setup.cfg  setup.py  setup.sh
src/: __init__.py  downloader.py  main.py
