# YouTube Downloader Configuration
# This file contains build and package settings

[metadata]
name = youtube-video-downloader
version = 1.0.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    yt-dlp>=2024.1.0

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[pyinstaller]
# PyInstaller specs for building Windows executable
# Used by build-windows.bat and build-windows.sh
